--- a/index.html
+++ b/index.html
@@ -12,7 +12,21 @@
 </head>
 
 <header>
-    <div id="headercontent">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">Christopher Barcala</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-item nav-link active" href="index.html">About <span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
+                <a class="nav-item nav-link" href="contact.html">Contact</a>
+            </div>
+        </div>
+    </nav>
+    <!-- <div id="headercontent">
         <div class="row">
             <div class="col-md-1"></div>
             <div class="col-md-5">
@@ -31,8 +45,7 @@
             </div>
             <div class="col-md-1"></div>
         </div>
-    </div>
-
+    </div> -->
 </header>
 
 <body>
