updated bio content

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 
 <body>
 
-    <body background="assets/images/background.png">
-        </background>
+    <!-- <body background="assets/images/background.png">
+        </background> -->
 
         <div class="row">
             <div class="col-md-1"></div>
@@ -74,12 +74,14 @@
                         a job was tough, especially in Microsoft town for a non enterprise Mac guy, but somehow I
                         landed a job that had opportunity to grow. As I developed into a IT Client Engineer I took
                         on challenges with Powershell and automated AD and 365 tasks for my team, as well as special
-                        projects. This sparked my artistic tendencies and made me want to create again. That is when
+                        projects. 
+                        
+                        I was soon pulled into an Agency wide rollout of ServiceNow and become a backup admin for the project. I worked with javascript within its framework and that sparked my programming history. That is when
                         I decided to pursue development of some kind and am now taking the UW Full Stack Bootcamp
                         course. Here I am, looking for new opportunities to grow.
                     </p>
-                    <p class="p">Outside of IT, I’ve always enjoyed motorcycling, snowboarding and hunting. Those
-                        three took up my life in my mid 20's to late 30’s. These days I prefer traveling and
+                    <p class="p">Outside of IT, I’ve always enjoyed motorcycling, snowboarding. Those
+                        two hobbies took up most of my free time in my mid 20's to late 30’s. These days I prefer traveling and
                         exploring the world.</p>
                 </div>
             </div>
