--- a/portfolio.html
+++ b/portfolio.html
@@ -30,8 +30,8 @@
 
 <body>
 
-    <body background="assets/images/background.png">
-        </background>
+    <!-- <body background="assets/images/background.png">
+        </background> -->
 
         <div class="row">
             <div class="col-md-1"></div>
