--- a/contact.html
+++ b/contact.html
@@ -31,8 +31,8 @@
 
 <body>
 
-  <body background="assets/images/background.png">
-    </background>
+  <!-- <body background="assets/images/background.png">
+    </background> -->
 
     <div class="row">
       <div class="col-md-1"></div>
