updated portfolio projects

--- a/portfolio.html
+++ b/portfolio.html
@@ -30,44 +30,69 @@
 
 <body>
 
-    <!-- <body background="assets/images/background.png">
-        </background> -->
-
-        <div class="row">
-            <div class="col-md-1"></div>
-            <div class="col-md-10">
-                <div class="wrapper">
-                    <h1 class="h1">Portfolio</h1>
-                    <hr color="#b3b3b3">
-                    <div class="gallerybox">
-                        <div class="galleryimg">
-                            <img src="assets/images/hangman.jpeg">
-                            <div class="gallerybanner">Hangman</div>
+    <div class="row">
+        <div class="col-md-1"></div>
+        <div class="col-md-10">
+            <div class="wrapper">
+                <h1 class="h1">Portfolio</h1>
+                <hr color="#b3b3b3">
+                <div class="row">
+                    <div class="col-sm-6">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">Work Day Scheduler</h5>
+                                <img src="assets/images/workday.png" width=300px>
+                                <p class="card-text">All elements created using jquery, including the ability to save
+                                    data to local storage. Color coded for past, present and future dates using CSS.</p>
+                                <a href="https://cbarcala23.github.io/homework5/" target="_blank"
+                                    class="btn btn-dark">Click to see</a>
+                                <br><br>
+                                <a href="https://github.com/cbarcala23/homework5" target="_blank"
+                                    class="card-link">Click here to go to the Github Repo</a>
+                            </div>
                         </div>
-                        <div class="galleryimg">
-                            <img src="assets/images/rpggame.jpg">
-                            <div class="gallerybanner">RPG Game</div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">Weather API</h5>
+                                <img src="assets/images/weatherapi.png" width=300px>
+                                <p class="card-text">Built using jquery and calling a weather API to get the current
+                                    forecast as well as the 5 day forecast. Each city you search is saved in the history
+                                    so you can return to it as needed.</p>
+                                <a href="https://cbarcala23.github.io/homework6/" target="_blank"
+                                    class="btn btn-dark">Click to see</a>
+                                <br><br>
+                                <a href="https://github.com/cbarcala23/homework6" target="_blank"
+                                    class="card-link">Click here to go to the Github Repo</a>
+                            </div>
                         </div>
-                        <div class="galleryimg">
-                            <img src="assets/images/triviagame.jpeg">
-                            <div class="gallerybanner">Trivia Game</div>
-                        </div>
-                        <div class="galleryimg">
-                            <img src="assets/images/widgets.jpeg">
-                            <div class="gallerybanner">Rutgers Info Widget</div>
-                        </div>
-                        <div class="galleryimg">
-                            <img src="assets/images/rockpaper.png">
-                            <div class="gallerybanner">Rock Paper Scissors</div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">UW Bootcamp Project 1</h5>
+                                <img src="assets/images/hostingapp.png" width=300px>
+                                <p class="card-text">This was our first project with collaboration from a group using Git to branch, commit, create pull requests, review and merge data. This project consists of two API's (Spoonacular, Cocktail DB) to gather user input for ingredients and get reciples that include all ingredients. The history is saved so you can toggle back and forth with the recipes. </p>
+                                <a href="https://atdiep.github.io/Hosting-App/" target="_blank"
+                                    class="btn btn-dark">Click to see</a>
+                                <br><br>
+                                <a href="https://github.com/atdiep/Hosting-App" target="_blank"
+                                    class="card-link">Click here to go to the Github Repo</a>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-    </body>
-    </div>
-    </div>
-    <div class="col-md-1"></div>
-    </div>
+        </div>
+
+</body>
+
+
+<div class="col-md-1"></div>
+</div>
 
 </body>
 
