added resume pdf

--- a/index.html
+++ b/index.html
@@ -23,77 +23,61 @@
                 <a class="nav-item nav-link active" href="index.html">About <span class="sr-only">(current)</span></a>
                 <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
                 <a class="nav-item nav-link" href="contact.html">Contact</a>
+                <a class="nav-item nav-link" href="https://www.linkedin.com/in/christopher-barcala-780225103/" target="_blank">LinkeIn
+                    Profile</a>
+                <a class="nav-item nav-link" href="./assets/ChrisBarcalaCV.pdf">Resume</a>
             </div>
         </div>
     </nav>
-    <!-- <div id="headercontent">
-        <div class="row">
-            <div class="col-md-1"></div>
-            <div class="col-md-5">
-                <div class="logo">
-                    Christopher Barcala
-                </div>
-            </div>
-            <div class="col-md-5">
-                <div class="nav">
-                    <li><a href="index.html">About</a></li>
-                    <li>|</li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
-                    <li>|</li>
-                    <li><a href="contact.html">Contact</a></li>
-                </div>
-            </div>
-            <div class="col-md-1"></div>
-        </div>
-    </div> -->
+
 </header>
 
 <body>
 
-    <!-- <body background="assets/images/background.png">
-        </background> -->
+    <div class="row">
+        <div class="col-md-1"></div>
+        <div class="col-md-10">
+            <div class="wrapper">
+                <div class="row1">
 
-        <div class="row">
-            <div class="col-md-1"></div>
-            <div class="col-md-10">
-                <div class="wrapper">
-                    <div class="row1">
+                    <h1 class="h1">About Me</h1>
+                    <hr color="#b3b3b3">
 
-                        <h1 class="h1">About Me</h1>
-                        <hr color="#b3b3b3">
-
-                    </div>
-                    <section id="floatimage">
-                        <img src="assets/images/picholder.jpg">
-                    </section>
-                    <p class="p">Born and raised in Queens NY, I picked a spot on the globe and moved to Seattle in
-                        the Summer of 2016 without a job or idea of how Seattle was going to be. I just knew I
-                        needed a change from the grind of NYC. </p>
-                    <p class="p">I graduated with a Computer Science degree and although I’ve always had a strong
-                        artistic pull, I ended up in IT Support (specifically for Macs). Moving out here and finding
-                        a job was tough, especially in Microsoft town for a non enterprise Mac guy, but somehow I
-                        landed a job that had opportunity to grow. As I developed into a IT Client Engineer I took
-                        on challenges with Powershell and automated AD and 365 tasks for my team, as well as special
-                        projects. 
-                        
-                        I was soon pulled into an Agency wide rollout of ServiceNow and become a backup admin for the project. I worked with javascript within its framework and that sparked my programming history. That is when
-                        I decided to pursue development of some kind and am now taking the UW Full Stack Bootcamp
-                        course. Here I am, looking for new opportunities to grow.
-                    </p>
-                    <p class="p">Outside of IT, I’ve always enjoyed motorcycling, snowboarding. Those
-                        two hobbies took up most of my free time in my mid 20's to late 30’s. These days I prefer traveling and
-                        exploring the world.</p>
                 </div>
+                <section id="floatimage">
+                    <img src="assets/images/picholder.jpg">
+                </section>
+                <p class="p">Born and raised in Queens NY, I picked a spot on the globe and moved to Seattle in
+                    the Summer of 2016 without a job or idea of how Seattle was going to be. I just knew I
+                    needed a change from the grind of NYC. </p>
+                <p class="p">I graduated with a Computer Science degree and although I’ve always had a strong
+                    artistic pull, I ended up in IT Support (specifically for Macs). Moving out here and finding
+                    a job was tough, especially in Microsoft town for a non enterprise Mac guy, but somehow I
+                    landed a job that had opportunity to grow. As I developed into a IT Client Engineer I took
+                    on challenges with Powershell and automated AD and 365 tasks for my team, as well as special
+                    projects.
+
+                    I was soon pulled into an Agency wide rollout of ServiceNow and became an official backup admin for the
+                    project. I worked with javascript for the first time within its framework and that led me to want to grow my skills. That
+                    is when
+                    I decided to pursue development of some kind and signed up for the UW Full Stack Bootcamp
+                    course. Here I am, looking for new opportunities to grow.
+                </p>
+                <p class="p">Outside of IT, I’ve always enjoyed motorcycling, snowboarding. Those
+                    two hobbies took up most of my free time in my mid 20's to late 30’s. These days I prefer traveling
+                    and
+                    exploring the world.</p>
             </div>
-            <div class="col-md-1"></div>
         </div>
+        <div class="col-md-1"></div>
+    </div>
 
 
-        <div class="content">
-            Copyright ©
-        </div>
+    <div class="content">
+        Copyright ©
+    </div>
 
-    </body>
+</body>
 
 
 </html>
