--- a/contact.html
+++ b/contact.html
@@ -19,11 +19,15 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-item nav-link active" href="index.html">About <span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
-        <a class="nav-item nav-link" href="contact.html">Contact</a>
-      </div>
+        <div class="navbar-nav">
+            <a class="nav-item nav-link active" href="index.html">About <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
+            <a class="nav-item nav-link" href="contact.html">Contact</a>
+            <a class="nav-item nav-link" href="https://www.linkedin.com/in/christopher-barcala-780225103/" target="_blank">LinkeIn
+                Profile</a>
+            <a class="nav-item nav-link" href="#">Resume</a>
+        </div>
+    </div>
     </div>
   </nav>
 </header>
