--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,15 @@
   <title>Chris Barcala Portfolio with Bootstrap</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
@@ -19,14 +28,15 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="index.html">About <span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
-            <a class="nav-item nav-link" href="contact.html">Contact</a>
-            <a class="nav-item nav-link" href="https://www.linkedin.com/in/christopher-barcala-780225103/" target="_blank">LinkeIn
-                Profile</a>
-            <a class="nav-item nav-link" href="#">Resume</a>
-        </div>
+      <div class="navbar-nav">
+        <a class="nav-item nav-link active" href="index.html">About <span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
+        <a class="nav-item nav-link" href="contact.html">Contact</a>
+        <a class="nav-item nav-link" href="https://www.linkedin.com/in/christopher-barcala-780225103/"
+          target="_blank">LinkeIn
+          Profile</a>
+        <a class="nav-item nav-link" href="./assets/ChrisBarcalaCV.pdf">Resume</a>
+      </div>
     </div>
     </div>
   </nav>
@@ -38,34 +48,32 @@
   <!-- <body background="assets/images/background.png">
     </background> -->
 
-    <div class="row">
-      <div class="col-md-1"></div>
-      <div class="col-md-10">
-        <div class="wrapper">
-          <h1 class="h1">Contact</h1>
-          <hr color="#b3b3b3">
-          <form class="form p">
-            Name:<br>
-            <input type="text" placeholder="John Smith" name="Name"><br>
-            Email:<br>
-            <input type="text" placeholder="example@gmail.com" name="Email">
-            Message:<br>
-            <input id="messagebox" type="text" name="Message">
-            <br>
-            <input type="submit" value="Submit">
-          </form>
-        </div>
+  <div class="row">
+    <div class="col-md-1"></div>
+    <div class="col-md-10">
+      <div class="wrapper">
+        <h1 class="h1">Contact</h1>
+        <hr color="#b3b3b3">
+        <form class="form p">
+          Name:<br>
+          <input type="text" placeholder="John Smith" name="Name"><br>
+          Email:<br>
+          <input type="text" placeholder="example@gmail.com" name="Email">
+          Message:<br>
+          <input id="messagebox" type="text" name="Message">
+          <br>
+          <input type="submit" value="Submit">
+        </form>
       </div>
-      <div class="col-md-1"></div>
     </div>
+    <div class="col-md-1"></div>
+  </div>
 
-    <div class="content">
-      Copyright ©
-    </div>
-    <footer class="footer"></footer>
+  <div class="footer">
+  </div>
 
 
-  </body>
+</body>
 
 
 
