--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <title>Chris Barcala Portfolio with Bootstrap</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
@@ -23,7 +32,8 @@
                 <a class="nav-item nav-link active" href="index.html">About <span class="sr-only">(current)</span></a>
                 <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
                 <a class="nav-item nav-link" href="contact.html">Contact</a>
-                <a class="nav-item nav-link" href="https://www.linkedin.com/in/christopher-barcala-780225103/" target="_blank">LinkeIn
+                <a class="nav-item nav-link" href="https://www.linkedin.com/in/christopher-barcala-780225103/"
+                    target="_blank">LinkeIn
                     Profile</a>
                 <a class="nav-item nav-link" href="./assets/ChrisBarcalaCV.pdf">Resume</a>
             </div>
@@ -57,8 +67,10 @@
                     on challenges with Powershell and automated AD and 365 tasks for my team, as well as special
                     projects.
 
-                    I was soon pulled into an Agency wide rollout of ServiceNow and became an official backup admin for the
-                    project. I worked with javascript for the first time within its framework and that led me to want to grow my skills. That
+                    I was soon pulled into an Agency wide rollout of ServiceNow and became an official backup admin for
+                    the
+                    project. I worked with javascript for the first time within its framework and that led me to want to
+                    grow my skills. That
                     is when
                     I decided to pursue development of some kind and signed up for the UW Full Stack Bootcamp
                     course. Here I am, looking for new opportunities to grow.
@@ -72,9 +84,7 @@
         <div class="col-md-1"></div>
     </div>
 
-
-    <div class="content">
-        Copyright ©
+    <div class="footer">
     </div>
 
 </body>
