updated readme and resume

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
                 </div>
                 <section id="floatimage">
-                    <img src="assets/images/picholder.jpg">
+                    <img src="assets/images/picholder.JPG">
                 </section>
                 <p class="p">Born and raised in Queens NY, I picked a spot on the globe and moved to Seattle in
                     the Summer of 2016 without a job or idea of how Seattle was going to be. I just knew I
