--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,7 @@
                         <div class="card">
                             <div class="card-body">
 
-                                <img src="assets/images/workday.png" width=300px>
+                                <img src="assets/images/workday.png" width=300px height=200px>
                                 <br><br>
                                 <h5 class="card-title">Title: Work Day Scheduler</h5>
                                 <p class="card-text">All elements created using jquery, including the ability to save
@@ -71,7 +71,7 @@
                         <div class="card">
                             <div class="card-body">
 
-                                <img src="assets/images/weatherapi.png" width=300px>
+                                <img src="assets/images/weatherapi.png" width=300px height=200px>
                                 <br><br>
                                 <h5 class="card-title">Title: Weather API</h5>
                                 <p class="card-text">Built using jquery and calling a weather API to get the current
@@ -91,7 +91,7 @@
                         <div class="card">
                             <div class="card-body">
 
-                                <img src="assets/images/hostingapp.png" width=300px>
+                                <img src="assets/images/hostingapp.png" width=300px height=200px>
                                 <br><br>
                                 <h5 class="card-title">UW Bootcamp Project 1</h5>
                                 <p class="card-text">This was our first project with collaboration from a group using
