--- a/portfolio.html
+++ b/portfolio.html
@@ -108,6 +108,36 @@
                         </div>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <div class="card">
+                            <div class="card-body">
+
+                                <img src="assets/images/365script.png" width=300px height=200px>
+                                <br><br>
+                                <h5 class="card-title">Title: O365 Powershell Script</h5>
+                                <p class="card-text">Typical scenario for doing this is you want all users in one security group (Fulltime Staff) to see each others LimitedDetails rather than the Default AvailabilityOnly, without letting the entire agency see their LimitedDetails in the case you have Contractors/Consultants.</p>
+                                <br><br>
+                                <a href="https://github.com/cbarcala23/AD-Powershell---Telephone-Numbers-Format-Cleanup" target="_blank"
+                                    class="card-link">Click here to go to the Github Repo</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="card">
+                            <div class="card-body">
+
+                                <img src="assets/images/adscript.png" width=300px height=200px>
+                                <br><br>
+                                <h5 class="card-title">Title: AD Telephone Number Cleanup Script</h5>
+                                <p class="card-text">Typical Scenario, your AD Environment has users with telephone numbers with format xxx-xxx-xxx, xxxxxxxxx, yxxxxxxxxx, (xxx)xxx-xxxx, and so on. You need to clean up the number to remove all characters and keep a standard of 10 digits as in xxxxxxxxx. </p>
+                                <br><br>
+                                <a href="https://github.com/cbarcala23/O365-Powershell---Set-Calendar-Permissions-via-AD-Security-Group" target="_blank"
+                                    class="card-link">Click here to go to the Github Repo</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
