--- a/portfolio.html
+++ b/portfolio.html
@@ -54,9 +54,9 @@
                         <div class="card">
                             <div class="card-body">
 
-                                <img src="assets/images/workday.png" width=300px height=200px>
+                                <img src="assets/images/workday.png" width=auto height=200px>
                                 <br><br>
-                                <h5 class="card-title">Title: Work Day Scheduler</h5>
+                                <h5 class="card-title">Work Day Scheduler</h5>
                                 <p class="card-text">All elements created using jquery, including the ability to save
                                     data to local storage. Color coded for past, present and future dates using CSS.</p>
                                 <a href="https://cbarcala23.github.io/homework5/" target="_blank"
@@ -71,9 +71,9 @@
                         <div class="card">
                             <div class="card-body">
 
-                                <img src="assets/images/weatherapi.png" width=300px height=200px>
+                                <img src="assets/images/weatherapi.png" width=auto height=200px>
                                 <br><br>
-                                <h5 class="card-title">Title: Weather API</h5>
+                                <h5 class="card-title">Weather API</h5>
                                 <p class="card-text">Built using jquery and calling a weather API to get the current
                                     forecast as well as the 5 day forecast. Each city you search is saved in the history
                                     so you can return to it as needed.</p>
@@ -91,7 +91,7 @@
                         <div class="card">
                             <div class="card-body">
 
-                                <img src="assets/images/hostingapp.png" width=300px height=200px>
+                                <img src="assets/images/hostingapp.png" width=auto height=200px>
                                 <br><br>
                                 <h5 class="card-title">UW Bootcamp Project 1</h5>
                                 <p class="card-text">This was our first project with collaboration from a group using
@@ -113,9 +113,9 @@
                         <div class="card">
                             <div class="card-body">
 
-                                <img src="assets/images/365script.png" width=300px height=200px>
+                                <img src="assets/images/365script.png" width=auto height=200px>
                                 <br><br>
-                                <h5 class="card-title">Title: O365 Powershell Script</h5>
+                                <h5 class="card-title">O365 Powershell Script</h5>
                                 <p class="card-text">Typical scenario for doing this is you want all users in one security group (Fulltime Staff) to see each others LimitedDetails rather than the Default AvailabilityOnly, without letting the entire agency see their LimitedDetails in the case you have Contractors/Consultants.</p>
                                 <br><br>
                                 <a href="https://github.com/cbarcala23/AD-Powershell---Telephone-Numbers-Format-Cleanup" target="_blank"
@@ -127,9 +127,9 @@
                         <div class="card">
                             <div class="card-body">
 
-                                <img src="assets/images/adscript.png" width=300px height=200px>
+                                <img src="assets/images/adscript.png" width=auto height=200px>
                                 <br><br>
-                                <h5 class="card-title">Title: AD Telephone Number Cleanup Script</h5>
+                                <h5 class="card-title">AD Telephone Number Cleanup Script</h5>
                                 <p class="card-text">Typical Scenario, your AD Environment has users with telephone numbers with format xxx-xxx-xxx, xxxxxxxxx, yxxxxxxxxx, (xxx)xxx-xxxx, and so on. You need to clean up the number to remove all characters and keep a standard of 10 digits as in xxxxxxxxx. </p>
                                 <br><br>
                                 <a href="https://github.com/cbarcala23/O365-Powershell---Set-Calendar-Permissions-via-AD-Security-Group" target="_blank"
