--- a/index.html
+++ b/index.html
@@ -57,19 +57,16 @@
                 <section id="floatimage">
                     <img src="assets/images/picholder.JPG">
                 </section>
-                <p class="p">Born and raised in Queens NY, I picked a spot on the globe and moved to Seattle in
-                    the Summer of 2016 without a job or idea of how Seattle was going to be. I just knew I
-                    needed a change from the grind of NYC. </p>
+                <p class="p">I am from Queens New York and have been living in Seattle since mid 2015. After 35 years I got tired of the constant grind of NYC and decided I needed a change and challenge. I picked a spot on one the globe and chose Seattle. I moved out here without a job or an idea of how Seattle was going to be. </p>
                 <p class="p">I graduated with a Computer Science degree and although I’ve always had a strong
-                    artistic pull, I ended up in IT Support (specifically for Macs). Moving out here and finding
-                    a job was tough, especially in Microsoft town for a non enterprise Mac guy, but somehow I
-                    landed a job that had opportunity to grow. As I developed into a IT Client Engineer I took
+                    artistic pull, I ended up in IT Support, specifically for Macs. Moving out here and finding
+                    a job was tough, especially in Microsoft town for a non enterprise Mac guy, but I managed to land a job that had opportunity to grow. As I developed into a IT Client Engineer I took
                     on challenges with Powershell and automated AD and 365 tasks for my team, as well as special
-                    projects.
-
-                    I was soon pulled into an Agency wide rollout of ServiceNow and became an official backup admin for
+                    projects. I also ended up taking ownership of the then current Ticketing system from Micrsoft System Center Service Manager. I worked with the vendor to migrate to the latest version on new servers and then became the admin for it. My duties involved creating and modifying templates as needed as well as dealing with HTML notifications.
+                    <br><br>
+                    With the implementation of ServiceNow as the new ticketing tool to the Agency, I was asked to become an official admin for
                     the
-                    project. I worked with javascript for the first time within its framework and that led me to want to
+                    project due to my experience with the old ticketing system. I worked with javascript for the first time within its framework and that led me to want to
                     grow my skills. That
                     is when
                     I decided to pursue development of some kind and signed up for the UW Full Stack Bootcamp
