--- a/portfolio.html
+++ b/portfolio.html
@@ -51,10 +51,10 @@
                 <hr color="#b3b3b3">
                 <div class="row">
                     <div class="col-sm-6">
-                        <div class="card">
+                        <div class="card-deck">
                             <div class="card-body">
 
-                                <img src="assets/images/workday.png" width=auto height=200px>
+                                <img src="assets/images/workday.png" class="card-img-top" width=auto height=auto>
                                 <br><br>
                                 <h5 class="card-title">Work Day Scheduler</h5>
                                 <p class="card-text">All elements created using jquery, including the ability to save
@@ -68,10 +68,10 @@
                         </div>
                     </div>
                     <div class="col-sm-6">
-                        <div class="card">
+                        <div class="card-deck">
                             <div class="card-body">
 
-                                <img src="assets/images/weatherapi.png" width=auto height=200px>
+                                <img src="assets/images/weatherapi.png" class="card-img-top" width=auto height=auto>
                                 <br><br>
                                 <h5 class="card-title">Weather API</h5>
                                 <p class="card-text">Built using jquery and calling a weather API to get the current
@@ -88,10 +88,10 @@
                 </div>
                 <div class="row">
                     <div class="col-sm-12">
-                        <div class="card">
+                        <div class="card-deck">
                             <div class="card-body">
 
-                                <img src="assets/images/hostingapp.png" width=auto height=200px>
+                                <img src="assets/images/hostingapp.png" class="card-img-top" width=auto height=auto>
                                 <br><br>
                                 <h5 class="card-title">UW Bootcamp Project 1</h5>
                                 <p class="card-text">This was our first project with collaboration from a group using
@@ -110,30 +110,35 @@
                 </div>
                 <div class="row">
                     <div class="col-sm-6">
-                        <div class="card">
+                        <div class="card-deck">
                             <div class="card-body">
-
-                                <img src="assets/images/365script.png" width=auto height=200px>
+                                <img src="assets/images/365script.png" class="card-img-top" width=auto height=auto>
                                 <br><br>
                                 <h5 class="card-title">O365 Powershell Script</h5>
-                                <p class="card-text">Typical scenario for doing this is you want all users in one security group (Fulltime Staff) to see each others LimitedDetails rather than the Default AvailabilityOnly, without letting the entire agency see their LimitedDetails in the case you have Contractors/Consultants.</p>
+                                <p class="card-text">Typical scenario for doing this is you want all users in one
+                                    security group (Fulltime Staff) to see each others LimitedDetails rather than the
+                                    Default AvailabilityOnly, without letting the entire agency see their LimitedDetails
+                                    in the case you have Contractors/Consultants.</p>
                                 <br><br>
-                                <a href="https://github.com/cbarcala23/AD-Powershell---Telephone-Numbers-Format-Cleanup" target="_blank"
-                                    class="card-link">Click here to go to the Github Repo</a>
+                                <a href="https://github.com/cbarcala23/AD-Powershell---Telephone-Numbers-Format-Cleanup"
+                                    target="_blank" class="card-link">Click here to go to the Github Repo</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-6">
-                        <div class="card">
+                        <div class="card-deck">
                             <div class="card-body">
 
-                                <img src="assets/images/ADscript.png" width=auto height=200px>
+                                <img src="assets/images/ADscript.png" class="card-img-top" width=auto height=auto>
                                 <br><br>
                                 <h5 class="card-title">AD Telephone Number Cleanup Script</h5>
-                                <p class="card-text">Typical Scenario, your AD Environment has users with telephone numbers with format xxx-xxx-xxx, xxxxxxxxx, yxxxxxxxxx, (xxx)xxx-xxxx, and so on. You need to clean up the number to remove all characters and keep a standard of 10 digits as in xxxxxxxxx. </p>
+                                <p class="card-text">Typical Scenario, your AD Environment has users with telephone
+                                    numbers with format xxx-xxx-xxx, xxxxxxxxx, yxxxxxxxxx, (xxx)xxx-xxxx, and so on.
+                                    You need to clean up the number to remove all characters and keep a standard of 10
+                                    digits as in xxxxxxxxx. </p>
                                 <br><br>
-                                <a href="https://github.com/cbarcala23/O365-Powershell---Set-Calendar-Permissions-via-AD-Security-Group" target="_blank"
-                                    class="card-link">Click here to go to the Github Repo</a>
+                                <a href="https://github.com/cbarcala23/O365-Powershell---Set-Calendar-Permissions-via-AD-Security-Group"
+                                    target="_blank" class="card-link">Click here to go to the Github Repo</a>
                             </div>
                         </div>
                     </div>
