spelling error fixed

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     artistic pull, I ended up in IT Support, specifically for Macs. Moving out here and finding
                     a job was tough, especially in Microsoft town for a non enterprise Mac guy, but I managed to land a job that had opportunity to grow. As I developed into a IT Client Engineer I took
                     on challenges with Powershell and automated AD and 365 tasks for my team, as well as special
-                    projects. I also ended up taking ownership of the then current Ticketing system from Micrsoft System Center Service Manager. I worked with the vendor to migrate to the latest version on new servers and then became the admin for it. My duties involved creating and modifying templates as needed as well as dealing with HTML notifications.
+                    projects. I also ended up taking ownership of the then current Ticketing system from Microsoft System Center Service Manager. I worked with the vendor to migrate to the latest version on new servers and then became the admin for it. My duties involved creating and modifying templates as needed as well as dealing with HTML notifications.
                     <br><br>
                     With the implementation of ServiceNow as the new ticketing tool to the Agency, I was asked to become an official admin for
                     the
